--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,13 @@ input[type=submit] {
 
 /*media queries*/
 
-@media only screen and( max-width: 980px) {
+@media only screen and(max-width: 640px ) {
+  header {
+    position: static;
+  }
+}
+
+@media only screen and(max-width: 980px) {
   body { 
     font-size: 18px;
    }
